# servier

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
conf/: config.yaml
servier/: cli.py  config.py  config.yaml  main.py  schemas.py
servier/api/: app.py
servier/model/: common.py  evaluate.py  models.py  predict.py  train.py
servier/utils/: data_preprocessing.py  feature_extractor.py
