[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["pip>=20.0.0", "poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>"]
description = "Simple molecule classification project"
name = "servier-technical-test"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
rdkit = "^2023.9.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
flake8 = "7.0.0"
isort = "5.13.2"
toml-sort = "0.23.1"
